# cadmium2_testing_framework

./: .gitignore  CMakeLists.txt  README.md  testing_framework_gui.py
example/: VariantGoblin.hpp
example/atomic_models/: Mission_Initialization_c2.hpp  Vending_Machine.hpp  test_atomic.hpp
example/json/: mission_init12.json  template.json  test_atomic.json  vending_machine.json
example/message_structures/: message_aircraft_state_t.hpp  message_item_selection_t.hpp  message_start_supervisor_t.hpp  message_update_gcs_t.hpp
example/test/drivers/: CMakeLists.txt
example/test/drivers/Mission_Initialization/: td_Mission_Initialization.cpp  test_data.hpp  top_Mission_Initialization.hpp
example/test/drivers/Vending_Machine/: td_Vending_Machine.cpp  test_data.hpp  top_Vending_Machine.hpp
example/test/drivers/test_atomic/: couple_test_atomic_td.hpp  td_test_atomic.cpp
include/: Comparator.hpp  Config.hpp  Decider.hpp  Generate.hpp  VariantGoblin.hpp  td_helpers.hpp
include/python/: cadmium2_driver_writer.py  cmake_target_writer.py  openai_query.py  test_data_writer.py  top_coupled_writer.py  variant_goblin_writer.py
resource/: gpt4-2.txt  gpt4.txt  json.txt  message_dummy_struct_t.hpp  mission_init.json  mission_init10.json  mission_init11.json  mission_init2.json  mission_init3.json  mission_init4.json  mission_init5.json  mission_init6.json  mission_init7.json  mission_init8.json  mission_init9.json  mission_initialization-2.txt  mission_initialization-3+.txt  mission_initialization-3.txt  mission_initialization-4.txt  mission_initialization-5-image.txt  mission_initialization-general+.txt  mission_initialization-general.txt  mission_initialization-general2.txt  mission_initialization.txt  openai_image_query.py  openai_query2.py  query_test_strings.py  standards.txt
